[gd_scene load_steps=11 format=3 uid="uid://dhy30dgrk3obo"]

[ext_resource type="Script" uid="uid://b5xt6ywyehhge" path="res://Scripts/GameManager.gd" id="1_iukft"]
[ext_resource type="AudioStream" uid="uid://cwx6134t0k3yc" path="res://Sounds/HIT.ogg" id="2_j5yw3"]
[ext_resource type="AudioStream" uid="uid://b5fmep2w2tq1o" path="res://Sounds/Miss_1.ogg" id="3_kldst"]

[sub_resource type="BoxMesh" id="BoxMesh_iukft"]
resource_name = "Fretboard"
size = Vector3(5, 0.1, 50)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_iukft"]
albedo_color = Color(0, 0.03137255, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_gl6un"]
material = SubResource("StandardMaterial3D_iukft")
size = Vector3(5.2, 0.1, 0.1)

[sub_resource type="LabelSettings" id="LabelSettings_iukft"]
font_size = 48

[sub_resource type="LabelSettings" id="LabelSettings_gl6un"]
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_j5yw3"]
font_size = 30

[sub_resource type="LabelSettings" id="LabelSettings_kldst"]
font_size = 48

[node name="GameManager" type="Node"]
process_mode = 1
script = ExtResource("1_iukft")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.81655085, 0.5772736, 0, -0.5772736, 0.81655085, 0, 4.7292595, 2.2999194)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.70710677, -0.3567549, 0.61051285, 0, 0.8633956, 0.5045276, -0.70710677, -0.3567549, 0.61051285, 8.881612, 5.1359816, 7.11556)
shadow_enabled = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(0.9998976, 0.014311211, 0, -0.014311211, 0.9998976, 0, 0, 0, 1, -0.018013954, -0.0076991916, -0.020614862)
mesh = SubResource("BoxMesh_iukft")

[node name="StrikeLine" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1361872, 0)
mesh = SubResource("BoxMesh_gl6un")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScoreLabel" type="Label" parent="CanvasLayer/Control"]
layout_mode = 0
offset_right = 107.0
offset_bottom = 36.0
text = "Score : 0"
label_settings = SubResource("LabelSettings_iukft")

[node name="ComboLabel" type="Label" parent="CanvasLayer/Control"]
layout_mode = 0
offset_top = 60.0
offset_right = 163.0
offset_bottom = 175.0
text = "Combo : 0"
label_settings = SubResource("LabelSettings_gl6un")

[node name="FeedbackLabel" type="Label" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 152.0
offset_top = 490.0
offset_right = 299.0
offset_bottom = 537.0
text = "PERFECT ! "
label_settings = SubResource("LabelSettings_j5yw3")

[node name="PauseMenu" type="Control" parent="CanvasLayer"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/PauseMenu"]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.09998595, 0.09998601, 0.099985994, 0.26666668)

[node name="ResumeButton" type="Button" parent="CanvasLayer/PauseMenu"]
layout_mode = 0
offset_left = 567.0
offset_top = 308.0
offset_right = 721.0
offset_bottom = 390.0
text = "REPRENDRE"

[node name="CountdownLabel" type="Label" parent="CanvasLayer/PauseMenu"]
visible = false
layout_mode = 0
offset_left = 653.0
offset_top = 308.0
offset_right = 693.0
offset_bottom = 375.0
text = "3"
label_settings = SubResource("LabelSettings_kldst")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SFXHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_j5yw3")
volume_db = 6.0

[node name="SFXMiss" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_kldst")
